# programming_samples

./: .env  .travis.yml  README.md  test.sh
.env.d/: .catkin  rosbuild.sh
.env_settings/: .rosinstall  rosbuild.sh
algorism/nelder_mead/: README.md  nelder-mead.py
c/python/: README.md
c/python/embed_python/: CMakeLists.txt  main.cpp
c/python/use_c_lib_in_python/: CMakeLists.txt  sample.c
c/ubuntu/pty_sample/: CMakeLists.txt  build.sh  main.c  test.sh
c/ubuntu/terminal/: main.c
cmake/00_what_is_cmake/: CMakeLists.txt  README.md
cmake/02_shell_scripts/: CMakeLists.txt  README.md  build.cmake  main.cpp
cmake/03_find_package/: .gitignore  CMakeLists.txt  README.md  build.sh  main.c
cpp/OpenMP/: CMakeLists.txt  main.cpp  main.cpp.bak
cpp/Qt/window/: .dependencies  README.md  build.sh  main.cpp
cpp/basic/.template/: .gitignore  build.sh  main.cpp
cpp/basic/bit/: main.cpp
cpp/basic/inheritance/: CMakeLists.txt  main.cpp
cpp/basic/joy2/: .gitignore  CMakeLists.txt  build.sh  getch.cpp  getch.h  keyboard_joy.cpp  package.xml  test.cpp
cpp/basic/string/: main.cpp
cpp/boost/MultiIndex/: CMakeLists.txt  main.cpp
cpp/boost/binding/: .dependencies  CMakeLists.txt  boost_function.cpp  build.sh  main.cpp
cpp/boost/geometry/sample/: main.cpp
cpp/boost/map/: README.md  main.cpp
cpp/boost/numpy/: CMakeLists.txt  README.md  build.sh  numpy.cpp
cpp/boost/timer/: .dependencies
cpp/boost/timer/sample1/: CMakeLists.txt  main.cpp
cpp/hrpsys/sequence_player/: #sample.csv#  .gitignore  CMakeLists.txt  README.md  build.sh  find_hrpsys_cmake_modules  find_hrpsys_source  main.cpp  main2.cpp  plot.plt  plot2.plt  tracking.cpp  tracking.plt  tracking_without_interpolation.cpp  tracking_without_interpolation.plt
cpp/mathgl/: .dependencies  CMakeLists.txt  build.sh  main.cpp
cpp/openCV/: .dependencies
cpp/openCV/CV_TEMPLATE/: CMakeLists.txt  main.cpp
cpp/openCV/bounding_box/: main.cpp
cpp/openCV/feature_1/: main.cpp
cpp/openCV/feature_2/: .gitignore  build.sh  main.cpp  test.sh
cpp/openCV/filter/: main.cpp
cpp/openCV/first_sample/: main.cpp
cpp/openCV/gray_scale/: main.cpp
cpp/openCV/reduction/: main.cpp  test.sh
cpp/openCV/rotate/: main.cpp  test.sh
cpp/openCV/samples/: building.jpg.org  hana.jpg.org  hana2.jpg.org  rectangle.xcf  red_2x2.xcf
cpp/openGL/: .dependencies  README.md
cpp/openGL/2d/: #build.sh#  #main3.c#  CMakeLists.txt  build.sh  main.c  main2.c  main3.c
cpp/openGL/showCube/: CMakeLists.txt  build.sh  cube.c  cube2.c  cube3.c
cpp/pybind11/: .dependencies
cpp/pybind11/eigen_sample/: code.cpp  setup.py  test.py
cpp/pybind11/numpy_sample/: build.sh  main.cpp  setup.py
cpp/pybind11/python_sample/: main.cpp  setup.py
cpp/std/map_itr/: README.md  main.cpp
docs/: color.html
doxygen/php_sample/: Doxyfile
doxygen/php_sample/doc/: Doxyfile  README
doxygen/php_sample/src/: sample.php
html/02_css/: embed_body.html  embed_head.html  test.css  test.html
html/03_javascript/: embed_javascript.html  test.html  test.js
python/: print.py
python/00_args/: README.md  args.py
python/01_elapsed_time_decorator/: README.md  check_elapsed_time.py
python/02_ArgumentParser/: .dependencies  README.md  parse_arg.py  sample.py  script_completion.sh  tab_completion.py
python/03_convert_data_type/: README.md  build.sh  main.c  sample.py
python/SymPy/: diff_eq.py  sympy_sample.py
python/chainer/first_step/: README.md  backward_computation.py  links.py  model.py  optimizer.py
python/chainer/sin_learn/: README.md  train_sin.py
python/debug_tool/: README.md  varChecker.py
python/gym/: .dependencies  README.md  initial_sample.py  initial_sample2.py
python/logging/: README.md
python/ode/: README.md  funcs.py  order2diff.py
python/plot/: README.md  animate_good_sample.py  animate_with_wx.py  simple_sample.py
python/plot/animation/: animate_good_easy_sample.py  simple_sample_class.py
python/plot/backend/: with_pyqt.py
python/plot/settings/: arrange_area.py  change_backgroundcolor.py  legend.py
python/pyqt/: group.py  icon.py  list.py  menu_bar.py  msgBox.py  progressBar.py  radio.py  readme.md  slider.py  tab.py  table.py  time.py  txtBox.py  window.py
python/pyqt/pyqtgraph/: 00window.py  01easiest_plot.py  02plot_on_window.py  99button.py  README.md
python/qp/: cvxopt_qp.py  scipy_qp.py
shell/awk/: README.md  getTemperature.awk  getTemperature.sh  sample.txt  sample1.awk  sample2.awk  sample3.awk  sample4.awk  sample5.awk  temperature.awk
sphinx/sample/: README.md
sphinx/sample/src/: main.py
vrml/: README.md  box.wrl  extrusion.wrl  soccor.wrl  soccor_PROTO.wrl  sphere.wrl  text.wrl
